# sonia_embed_toolkit

./: CMakeLists.txt  library.json
include/: canbus_toolkit.h  hamming_func.h  hamming_toolkit.h  rs485_toolkit.h
src/: canbus_toolkit.cpp  hamming_func.cpp  hamming_toolkit.cpp  main.cpp  rs485_toolkit.cpp
tests/: canbus_toolkit_test.cpp  hamming_toolkit_test.cpp  main_tests.cpp  rs485_toolkit_test.cpp
